# nengoplotlib

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: Making connectome plots.ipynb  make_example_images.py  plot_on_atlas_demo.py
examples/_images/: plot_grid_animation-10 (dragged).tiff
nengoplotlib/: __init__.py  animation.py  heatmap.py  isi.py  phase_portrait.py  psth.py  raster.py  style.py  traces.py  weights.py
nengoplotlib/atlas/: __init__.py  animation.py  api.py  cache.py  cmap.py  fills.py  geom.py  ontology.py  plot.py  svg.py  swanson.py
nengoplotlib/connectomes/: README.md  __init__.py  api.py  connections.py  correlation.py  draw.py  gui.py  interactive.py  keys.py  layout.py  legend.py  plot.py  sizing.py  tree.py
nengoplotlib/sorting/: __init__.py  api.py  base.py  cluster.py  features.py  merge.py  sample.py  som.py  voronoi.py
tests/: test_atlas.py  test_new_plots.py  test_plots_smoke.py  test_sorting.py
